--- a/blogapp_server/package.json
+++ b/blogapp_server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon/index.js"
+    "dev": "nodemon/index.js",
+     "build": "echo 'Build step here (if needed)'"
   },
   "keywords": [],
   "author": "",
